--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+freemsu
 spring.session.store-type=redis
-server.session.timeout=30
-logging.level.com.bjedrzejewski: DEBUG
+server.servlet.session.timeout=30m
+logging.level.com.bjedrzejewski=DEBUG
